--- a/sample.ipynb
+++ b/sample.ipynb
@@ -120,31 +120,88 @@
        "      <td>Jumat, 12 Jul 2024 06:45 WIB</td>\n",
        "      <td>Presiden Joko Widodo (Jokowi) menyayangkan per...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>Kantor Staf Presiden Jawab Kritik Pembangunan ...</td>\n",
+       "      <td>Jumat, 29 Des 2017 04:20 WIB</td>\n",
+       "      <td>ADVERTISEMENT SCROLL TO CONTINUE WITH CONTENT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>303</th>\n",
+       "      <td>Anies Buta Huruf sampai Usia 7 tahun</td>\n",
+       "      <td>Jumat, 17 Nov 2017 06:03 WIB</td>\n",
+       "      <td>ADVERTISEMENT SCROLL TO CONTINUE WITH CONTENT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>304</th>\n",
+       "      <td>Prabowo Sebut Pemerintahan Lemah adalah Tantan...</td>\n",
+       "      <td>Sabtu, 21 Okt 2017 20:21 WIB</td>\n",
+       "      <td>ADVERTISEMENT SCROLL TO CONTINUE WITH CONTENT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>305</th>\n",
+       "      <td>Hari Kedua Jadi Gubernur, Anies Hadiri Acara G...</td>\n",
+       "      <td>Rabu, 18 Okt 2017 13:07 WIB</td>\n",
+       "      <td>ADVERTISEMENT SCROLL TO CONTINUE WITH CONTENT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>306</th>\n",
+       "      <td>Satu Juta Anak Berkebutuhan Khusus Tak Bisa Se...</td>\n",
+       "      <td>Selasa, 29 Agu 2017 11:54 WIB</td>\n",
+       "      <td>ADVERTISEMENT SCROLL TO CONTINUE WITH CONTENT</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>307 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               title  \\\n",
-       "0  SMA Labschool Jakarta Sukses Gelar Trip Observ...   \n",
-       "1  Poin-poin Peringatan & Arahan Prabowo di Sidan...   \n",
-       "2  Pengakuan Joki Tugas Dapat 10 Persen dari Baya...   \n",
-       "3  Kesaksian Joki Masuk PTN, 6 Orang Keroyok Ujia...   \n",
-       "4  Jokowi Miris Ranking Pendidikan dan Kesehatan ...   \n",
+       "                                                 title  \\\n",
+       "0    SMA Labschool Jakarta Sukses Gelar Trip Observ...   \n",
+       "1    Poin-poin Peringatan & Arahan Prabowo di Sidan...   \n",
+       "2    Pengakuan Joki Tugas Dapat 10 Persen dari Baya...   \n",
+       "3    Kesaksian Joki Masuk PTN, 6 Orang Keroyok Ujia...   \n",
+       "4    Jokowi Miris Ranking Pendidikan dan Kesehatan ...   \n",
+       "..                                                 ...   \n",
+       "302  Kantor Staf Presiden Jawab Kritik Pembangunan ...   \n",
+       "303               Anies Buta Huruf sampai Usia 7 tahun   \n",
+       "304  Prabowo Sebut Pemerintahan Lemah adalah Tantan...   \n",
+       "305  Hari Kedua Jadi Gubernur, Anies Hadiri Acara G...   \n",
+       "306  Satu Juta Anak Berkebutuhan Khusus Tak Bisa Se...   \n",
        "\n",
-       "                            date  \\\n",
-       "0  Selasa, 29 Okt 2024 17:40 WIB   \n",
-       "1   Kamis, 24 Okt 2024 09:12 WIB   \n",
-       "2   Sabtu, 27 Jul 2024 20:05 WIB   \n",
-       "3   Sabtu, 27 Jul 2024 10:10 WIB   \n",
-       "4   Jumat, 12 Jul 2024 06:45 WIB   \n",
+       "                              date  \\\n",
+       "0    Selasa, 29 Okt 2024 17:40 WIB   \n",
+       "1     Kamis, 24 Okt 2024 09:12 WIB   \n",
+       "2     Sabtu, 27 Jul 2024 20:05 WIB   \n",
+       "3     Sabtu, 27 Jul 2024 10:10 WIB   \n",
+       "4     Jumat, 12 Jul 2024 06:45 WIB   \n",
+       "..                             ...   \n",
+       "302   Jumat, 29 Des 2017 04:20 WIB   \n",
+       "303   Jumat, 17 Nov 2017 06:03 WIB   \n",
+       "304   Sabtu, 21 Okt 2017 20:21 WIB   \n",
+       "305    Rabu, 18 Okt 2017 13:07 WIB   \n",
+       "306  Selasa, 29 Agu 2017 11:54 WIB   \n",
        "\n",
-       "                                             content  \n",
-       "0  SMA Labschool Jakarta kembali menggelar kegiat...  \n",
-       "1  Presiden RIPrabowo Subiantomemberikan sejumlah...  \n",
-       "2  Penggunaan jasajokidi duniapendidikankini teng...  \n",
-       "3  Perbincangan soaljoki ujiandi dunia pendidikan...  \n",
-       "4  Presiden Joko Widodo (Jokowi) menyayangkan per...  "
+       "                                               content  \n",
+       "0    SMA Labschool Jakarta kembali menggelar kegiat...  \n",
+       "1    Presiden RIPrabowo Subiantomemberikan sejumlah...  \n",
+       "2    Penggunaan jasajokidi duniapendidikankini teng...  \n",
+       "3    Perbincangan soaljoki ujiandi dunia pendidikan...  \n",
+       "4    Presiden Joko Widodo (Jokowi) menyayangkan per...  \n",
+       "..                                                 ...  \n",
+       "302      ADVERTISEMENT SCROLL TO CONTINUE WITH CONTENT  \n",
+       "303      ADVERTISEMENT SCROLL TO CONTINUE WITH CONTENT  \n",
+       "304      ADVERTISEMENT SCROLL TO CONTINUE WITH CONTENT  \n",
+       "305      ADVERTISEMENT SCROLL TO CONTINUE WITH CONTENT  \n",
+       "306      ADVERTISEMENT SCROLL TO CONTINUE WITH CONTENT  \n",
+       "\n",
+       "[307 rows x 3 columns]"
       ]
      },
      "execution_count": 3,
@@ -155,7 +212,7 @@
    "source": [
     "df = pd.read_csv('news_dataset.csv')\n",
     "# Menampilkan beberapa baris pertama dataset\n",
-    "df.head()"
+    "df"
    ]
   },
   {
