feat: twitter scrapping

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -211,8 +211,199 @@
    ],
    "source": [
     "df = pd.read_csv('news_dataset.csv')\n",
-    "# Menampilkan beberapa baris pertama dataset\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>conversation_id_str</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>favorite_count</th>\n",
+       "      <th>full_text</th>\n",
+       "      <th>id_str</th>\n",
+       "      <th>image_url</th>\n",
+       "      <th>in_reply_to_screen_name</th>\n",
+       "      <th>lang</th>\n",
+       "      <th>location</th>\n",
+       "      <th>quote_count</th>\n",
+       "      <th>reply_count</th>\n",
+       "      <th>retweet_count</th>\n",
+       "      <th>tweet_url</th>\n",
+       "      <th>user_id_str</th>\n",
+       "      <th>username</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1853935333207109832</td>\n",
+       "      <td>Tue Nov 05 23:00:02 +0000 2024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>～～Fabel kanggo Dewasa～～ ️Fabel iki bisa duwe p...</td>\n",
+       "      <td>1853935333207109832</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>in</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://x.com/HuhitoOfficial/status/1853935333...</td>\n",
+       "      <td>1451469615012335616</td>\n",
+       "      <td>HuhitoOfficial</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1853932821896921492</td>\n",
+       "      <td>Tue Nov 05 22:50:04 +0000 2024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Kemaskini dana 02-11-2024 ️Sasaran: RM7 680 ️T...</td>\n",
+       "      <td>1853932826498154500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>VMisi7</td>\n",
+       "      <td>in</td>\n",
+       "      <td>Shah Alam, Selangor</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://x.com/VMisi7/status/1853932826498154500</td>\n",
+       "      <td>4793401045</td>\n",
+       "      <td>VMisi7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1853811345701126504</td>\n",
+       "      <td>Tue Nov 05 14:47:21 +0000 2024</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Peran Pendidikan Dalam Membentuk Masyarakat Ya...</td>\n",
+       "      <td>1853811345701126504</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>in</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://x.com/VartikelCom/status/1853811345701...</td>\n",
+       "      <td>1686587079416020992</td>\n",
+       "      <td>VartikelCom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1853795849211670577</td>\n",
+       "      <td>Tue Nov 05 13:45:46 +0000 2024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Perlunya usia Dini pembelajaran terhadap gener...</td>\n",
+       "      <td>1853795849211670577</td>\n",
+       "      <td>https://pbs.twimg.com/ext_tw_video_thumb/18537...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>in</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://x.com/singgihtepos01/status/1853795849...</td>\n",
+       "      <td>1527361675690930177</td>\n",
+       "      <td>singgihtepos01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1853781192690344178</td>\n",
+       "      <td>Tue Nov 05 12:47:33 +0000 2024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Berita penuh: https://t.co/ffjjp5rpjj #Pendidi...</td>\n",
+       "      <td>1853781196515480023</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TVPertiwi_MY</td>\n",
+       "      <td>in</td>\n",
+       "      <td>Bandar Baru Bangi</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://x.com/TVPertiwi_MY/status/185378119651...</td>\n",
+       "      <td>1014057168960565248</td>\n",
+       "      <td>TVPertiwi_MY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   conversation_id_str                      created_at  favorite_count  \\\n",
+       "0  1853935333207109832  Tue Nov 05 23:00:02 +0000 2024               0   \n",
+       "1  1853932821896921492  Tue Nov 05 22:50:04 +0000 2024               0   \n",
+       "2  1853811345701126504  Tue Nov 05 14:47:21 +0000 2024               1   \n",
+       "3  1853795849211670577  Tue Nov 05 13:45:46 +0000 2024               0   \n",
+       "4  1853781192690344178  Tue Nov 05 12:47:33 +0000 2024               0   \n",
+       "\n",
+       "                                           full_text               id_str  \\\n",
+       "0  ～～Fabel kanggo Dewasa～～ ️Fabel iki bisa duwe p...  1853935333207109832   \n",
+       "1  Kemaskini dana 02-11-2024 ️Sasaran: RM7 680 ️T...  1853932826498154500   \n",
+       "2  Peran Pendidikan Dalam Membentuk Masyarakat Ya...  1853811345701126504   \n",
+       "3  Perlunya usia Dini pembelajaran terhadap gener...  1853795849211670577   \n",
+       "4  Berita penuh: https://t.co/ffjjp5rpjj #Pendidi...  1853781196515480023   \n",
+       "\n",
+       "                                           image_url in_reply_to_screen_name  \\\n",
+       "0                                                NaN                     NaN   \n",
+       "1                                                NaN                  VMisi7   \n",
+       "2                                                NaN                     NaN   \n",
+       "3  https://pbs.twimg.com/ext_tw_video_thumb/18537...                     NaN   \n",
+       "4                                                NaN            TVPertiwi_MY   \n",
+       "\n",
+       "  lang             location  quote_count  reply_count  retweet_count  \\\n",
+       "0   in                  NaN            0            0              0   \n",
+       "1   in  Shah Alam, Selangor            0            0              0   \n",
+       "2   in                  NaN            0            0              0   \n",
+       "3   in                  NaN            0            0              0   \n",
+       "4   in    Bandar Baru Bangi            0            0              0   \n",
+       "\n",
+       "                                           tweet_url          user_id_str  \\\n",
+       "0  https://x.com/HuhitoOfficial/status/1853935333...  1451469615012335616   \n",
+       "1    https://x.com/VMisi7/status/1853932826498154500           4793401045   \n",
+       "2  https://x.com/VartikelCom/status/1853811345701...  1686587079416020992   \n",
+       "3  https://x.com/singgihtepos01/status/1853795849...  1527361675690930177   \n",
+       "4  https://x.com/TVPertiwi_MY/status/185378119651...  1014057168960565248   \n",
+       "\n",
+       "         username  \n",
+       "0  HuhitoOfficial  \n",
+       "1          VMisi7  \n",
+       "2     VartikelCom  \n",
+       "3  singgihtepos01  \n",
+       "4    TVPertiwi_MY  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('tweets-data/pendidikan-raw-data.csv')\n",
+    "df.head()\n"
    ]
   },
   {
